--- a/Notes from Abdul Azeez.ipynb
+++ b/Notes from Abdul Azeez.ipynb
@@ -3,20 +3,60 @@
   {
    "cell_type": "markdown",
    "id": "d60e8840",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ADDITIONAL REFERENCES\n"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "27d25cda",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "### Corey Schafer\n",
+    "\n",
+    "Python Tutorials\n",
+    "143 videos5,148,468 viewsLast updated on 28 Sept 2020\n",
+    "https://www.youtube.com/playlist?list=PL-osiE80TeTt2d9bfVyTiXJA-UTHn6WwU\n",
+    "\n",
+    "Corey Schafer\n",
+    "961K subscribers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cd762f0",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "c092465c",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Navin Reddy Github\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69ec0adf",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -43,7 +83,9 @@
   {
    "cell_type": "markdown",
    "id": "96a27227",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# CONFIGURE JUPYTER NOTEBOOK:"
    ]
@@ -51,7 +93,9 @@
   {
    "cell_type": "markdown",
    "id": "d9aaa8ec",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Installing jupyter over command line"
    ]
@@ -60,7 +104,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "35b04b03",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "https://www.geeksforgeeks.org/how-to-install-jupyter-notebook-in-windows/\n",
@@ -103,7 +149,9 @@
   {
    "cell_type": "markdown",
    "id": "5e4e53bf",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Jupyter cell expand and collapse utility (notebook extensions)"
    ]
@@ -111,7 +159,9 @@
   {
    "cell_type": "markdown",
    "id": "c465a2a2",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "https://www.youtube.com/watch?v=B9tC5ggKEUc&t=138s\n",
     " \n",
@@ -128,7 +178,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e99660b4",
+   "id": "18ec98e6",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "934157b9",
+   "metadata": {},
+   "source": [
+    "# NOTEBOOK FORMATTING GUIDES."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a0ef160",
+   "metadata": {},
+   "source": [
+    "###### https://medium.com/analytics-vidhya/the-jupyter-notebook-formatting-guide-873ab39f765e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1a9428d",
    "metadata": {},
    "outputs": [],
    "source": []
