--- a/00-Python Object and Data Structure Basics/Additional references.ipynb
+++ b/00-Python Object and Data Structure Basics/Additional references.ipynb
@@ -2,76 +2,52 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "80db93af",
+   "id": "5c20a8b8",
    "metadata": {},
    "source": [
-    "# Templates"
+    "# 00 Python Object and Data Structure Basics"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2c1c39e9",
-   "metadata": {},
+   "id": "f20149e9",
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "Blue color heading"
+    "######    Mike Dane , File Opening and formatting"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1389d750",
+   "id": "2e2e8c48",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "https://www.youtube.com/watch?v=jC7CPoSDNzE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffeb09e7",
    "metadata": {},
    "source": [
-    "<span style='color:DarkBlue'> Blue is my favorite color.  </span>"
+    "###### Python Tutorial: Learn Open() function in detail and 'With' statement in 8 Minutes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c114a84",
+   "metadata": {},
+   "source": [
+    " https://youtu.be/L-6thRrnyS0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecef17a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e605ce3b",
-   "metadata": {},
-   "source": [
-    "<span style='color:Maroon'> Maroon heading  </span>  Sample."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "230d6d8e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f30fde95",
-   "metadata": {},
-   "source": [
-    "## Formatting Guide\n",
-    "\n",
-    "#### https://medium.com/analytics-vidhya/the-jupyter-notebook-formatting-guide-873ab39f765e"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2382e31",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "757155d5",
+   "id": "457e26d1",
    "metadata": {},
    "outputs": [],
    "source": []
