--- a/Notes from Abdul Azeez.ipynb
+++ b/Notes from Abdul Azeez.ipynb
@@ -2,17 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d60e8840",
    "metadata": {
     "heading_collapsed": true
    },
    "source": [
-    "# ADDITIONAL REFERENCES\n"
+    "# ADDITIONAL PYTHON REFERENCES\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "27d25cda",
    "metadata": {
     "hidden": true
    },
@@ -30,7 +28,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cd762f0",
    "metadata": {
     "hidden": true
    },
@@ -39,9 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c092465c",
    "metadata": {
-    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -51,7 +46,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69ec0adf",
    "metadata": {
     "hidden": true
    },
@@ -61,7 +55,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a158fef3",
    "metadata": {
     "hidden": true
    },
@@ -73,7 +66,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "342902a5",
    "metadata": {
     "hidden": true
    },
@@ -82,18 +74,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96a27227",
    "metadata": {
     "heading_collapsed": true
    },
    "source": [
-    "# CONFIGURE JUPYTER NOTEBOOK:"
+    "# CONFIGURING JUPYTER NOTEBOOK:"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d9aaa8ec",
    "metadata": {
+    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -103,7 +94,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35b04b03",
    "metadata": {
     "hidden": true
    },
@@ -148,7 +138,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e4e53bf",
    "metadata": {
     "hidden": true
    },
@@ -158,7 +147,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c465a2a2",
    "metadata": {
     "hidden": true
    },
@@ -178,7 +166,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18ec98e6",
    "metadata": {
     "hidden": true
    },
@@ -187,16 +174,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "934157b9",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# NOTEBOOK FORMATTING GUIDES."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7a0ef160",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "###### https://medium.com/analytics-vidhya/the-jupyter-notebook-formatting-guide-873ab39f765e"
    ]
@@ -204,15 +193,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1a9428d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -226,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
