--- a/00-Python Object and Data Structure Basics/Additional references 00 Python Object and Data Structure Basics.ipynb
+++ b/00-Python Object and Data Structure Basics/Additional references 00 Python Object and Data Structure Basics.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5c20a8b8",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# 00 Python Object and Data Structure Basics"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f20149e9",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "######    Mike Dane , File Opening and formatting"
@@ -20,7 +21,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e2e8c48",
    "metadata": {
     "hidden": true
    },
@@ -30,16 +30,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffeb09e7",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "###### Python Tutorial: Learn Open() function in detail and 'With' statement in 8 Minutes"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9c114a84",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     " https://youtu.be/L-6thRrnyS0"
    ]
@@ -47,15 +50,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "457e26d1",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -69,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
