--- a/00-Python Object and Data Structure Basics/Excercise/08-Files-Excercise.ipynb
+++ b/00-Python Object and Data Structure Basics/Excercise/08-Files-Excercise.ipynb
@@ -575,16 +575,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fileobj = open('myfile.txt','r')"
+    "fileobj = open('myfile.txt','r')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -732,6 +732,168 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing anewfile.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile anewfile.txt\n",
+    "one on first\n",
+    "two on second\n",
+    "three on third"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\azi\\\\Documents\\\\GitHub\\\\Complete-Python-3-Bootcamp\\\\00-Python Object and Data Structure Basics\\\\Excercise'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Volume in drive C is Windows-SSD\n",
+      " Volume Serial Number is 5099-5675\n",
+      "\n",
+      " Directory of C:\\Users\\azi\\Documents\\GitHub\\Complete-Python-3-Bootcamp\\00-Python Object and Data Structure Basics\\Excercise\n",
+      "\n",
+      "02-Aug-23  01:08 PM    <DIR>          .\n",
+      "02-Aug-23  12:20 PM    <DIR>          ..\n",
+      "01-Aug-23  07:32 AM    <DIR>          .ipynb_checkpoints\n",
+      "01-Aug-23  11:32 AM            23,420 03-Print Formatting with Strings.ipynb\n",
+      "01-Aug-23  07:32 AM            19,423 04-Lists-Excercise.ipynb\n",
+      "01-Aug-23  07:32 AM            13,158 05-Dictionaries-excercise.ipynb\n",
+      "01-Aug-23  07:32 AM             9,500 06-Tuples-Excercise.ipynb\n",
+      "01-Aug-23  07:32 AM            12,323 07-Sets and Booleans Excercise.ipynb\n",
+      "02-Aug-23  01:07 PM            17,556 08-Files-Excercise.ipynb\n",
+      "01-Aug-23  07:32 AM            12,854 09-Objects and Data Structures Assessment Test Excercise.ipynb\n",
+      "02-Aug-23  01:08 PM                45 anewfile.txt\n",
+      "01-Aug-23  07:32 AM                51 myfile.txt\n",
+      "01-Aug-23  07:32 AM               112 newtest.txt\n",
+      "              10 File(s)        108,442 bytes\n",
+      "               3 Dir(s)  52,748,234,752 bytes free\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mynewfile = open('anewfile.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'one on first\\ntwo on second\\nthree on third\\n'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mynewfile.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('thisnewfile.txt', mode='w') as tempfile:\n",
+    "    tempfile.write(\"This is a new file\")\n",
+    "    toprint = tempfile.read"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function TextIOWrapper.read(size=-1, /)>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
